modificacion de titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-    <h1>Menu</h1>
+    <h1>Menú</h1>
     <p class="intruccuion">Seleccione la comida que quiera comer, abajo se le ira agregando la comida previamente seleccionada</p>
     <div class="comida">
         <div class="clases-comida">
