aun solucionando el problema, estamos mas cercas

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="eliminar boton">
-                <button onclick="eliminar()">Quitar</button>
+                <button onclick="eliminar('btnEliminar')">Quitar</button>
             </div>
             
         </div>
