--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
     <h1>Tiendita</h1>
     <div class="nav">
         <li>
-            <a href="Index.html">Inicio</a>
-            <a href="MenuSalado.html">Comida Salada</a>
+            <a href="index.html">Inicio</a>
+            <a href="menuSalado.html">Comida Salada</a>
             <a href="">Comida Dulce</a>
         </li>
     </div>
